# music246-abjad

./: .gitignore  AGENTS.md  Makefile  README-AlgorithmicPianoQuartetNo2.md  README-JazzRhythms.md  README-ModusOperandi.md  README-PianoQuartetStudy.md  README.md  art-song.docx  art-song.md  build.sh  midi2wav.sh  piano-quartet.toml  pyproject.toml  render_rhythms.py
.github/workflows/: build.yml  docs.yml  jazz_rhythms_build.yml
composition3/: modus-operandi+viola.ly  modus-operandi.ly
configs/: algorithmic-piano-quartet-no1.toml  algorithmic-piano-quartet-no2.toml
docs/: 01-abstract.rst  02-introduction.rst  03-background-and-tooling.rst  04-system-architecture.rst  05-common-pipeline.rst  06-case-study-modus-operandi.rst  07-case-study-jazz-rhythms.rst  08-case-study-quartet-no1.rst  09-case-study-quartet-no2.rst  10-case-study-algorithmic.rst  10a-case-study-bird-im-migration.rst  10b-case-study-bird-im-migration-ensemble.rst  10c-case-study-art-song.rst  11-configuration.rst  12-build-render-release.rst  13-score-discussion.rst  14-limitations.rst  15-future-work.rst  16-conclusion.rst  Makefile  appendix-a-repository-map.rst  appendix-b-configurations.rst  appendix-c-code-listings.rst  conf.py  index.rst
scripts/: generate_art_song_timeline.py
src/: audio_rendering.py  save-modus-operandi.ly
src/algorithmic_piano_quartet/: score.py
src/algorithmic_piano_quartet_no1/: __init__.py  __main__.py  cli.py  config.py  generator.py  score.py  soundfonts.py
src/algorithmic_piano_quartet_no2/: cli.py  config.py  generator.py  score.py
src/art_song/: __init__.py  __main__.py  cli.py  score.py
src/atonal_piano_quartet/: __init__.py  __main__.py  cli.py  config.py  generator.py  score.py
src/bird_im_migration/: __init__.py  __main__.py  analysis.py  cli.py  score.py
src/bird_im_migration_ensemble/: cli.py  generator.py  score.py
(+12 files in other folders)
