[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modus-operandi-abjad"
version = "0.1.0"
description = "Modus Operandi for Piano — a monody built using Abjad"
requires-python = ">= 3.10"
dependencies = [
    "abjad >= 3.19",
    "mido >= 1.3",
]

[project.scripts]
modus-operandi-abjad = "modus_operandi_abjad.cli:main"
jazz-rhythms = "jazz_rhythm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
